--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ ul li::before
     position: absolute;
     height: 25px;
     width: 25px;
-    background-image: url(/images/unchecked.png);
+    background-image: url(./images/unchecked.png);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
@@ -107,7 +107,7 @@ ul li.checked::before
     position: absolute;
     height: 25px;
     width: 25px;
-    background-image: url(/images/checked.png);
+    background-image: url(./images/checked.png);
     background-size: cover;
     border-radius: 50%;
     left: -35px;
